--- a/css/style.css
+++ b/css/style.css
@@ -1612,7 +1612,7 @@ h6 {
 .footer {
   /* margin-top: 500px; */
   padding-top: 30px;
-  background-image: url("images/hero.png");
+  background-image: url("/images/hero.png");
   background-repeat: no-repeat;
   background-size: cover;
   /* background-position: left -50px bottom 150px, center; */
